introducing connect payload